default/syncthing/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: syncthing
  namespace: default
  annotations:
    flux.weave.works/tag.syncthing: regexp:^[0-9]+$
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      volumes:
      - name: syncthing
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:syncthing
          targetPortal: nas1-storage.radoncanyon.com
          lun: 0
      containers:
      - name: syncthing
        image: linuxserver/syncthing:151
        volumeMounts:
        - name: syncthing
          subPath: config
          mountPath: /config
        - name: syncthing
          subPath: data
          mountPath: /data
        ports:
        - containerPort: 8384
          name: syncthing-ui
        - containerPort: 22000
          name: syncthing-bt
        - containerPort: 21027
          name: syncthing-disco
          protocol: UDP
