default/syncthing/service.yaml
# See https://github.com/kubernetes/kubernetes/pull/64471
# for discussion  around TCP+UDP support for LoadBalancer
apiVersion: v1
kind: Service
metadata:
  name: syncthing-tcp
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: syncthing
spec:
  selector:
    app: syncthing
  type: LoadBalancer
  loadBalancerIP: 192.168.222.244
  ports:
  - name: syncthing-ui
    port: 8384
    targetPort: 8384
  - name: syncthing-bt
    port: 22000
    targetPort: 22000
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-udp
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: syncthing
spec:
  selector:
    app: syncthing
  type: LoadBalancer
  loadBalancerIP: 192.168.222.244
  ports:
  - name: syncthing-disco
    port: 21027
    targetPort: 21027
    protocol: UDP
