default/syncthing/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: syncthing
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  tls:
  - hosts:
    - k.desertbluffs.com
  rules:
  - host: k.desertbluffs.com
    http:
      paths:
      - path: /
        backend:
          serviceName: syncthing
          servicePort: syncthing-ui
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: syncthing-oauth2
  namespace: default
spec:
  tls:
  - hosts:
    - k.desertbluffs.com
  rules:
  - host: k.desertbluffs.com
    http:
      paths:
      - path: /oauth2
        backend:
          serviceName: oauth2-proxy
          servicePort: oauth2-proxy
